@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.bbaron"
        name="MOVIE SCRAPER BBARON"
-       version="1.6"
+       version="1.7"
        provider-name="BBaron">
     <requires>
         <import addon="xbmc.metadata" version="2.1.0"/>
